Add edit function

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,3 +4,4 @@
     <li><%= link_to item.name, item %></li> <!--#ltタブで出てくる-->
   <% end %>
 </ul>
+<%= link_to "出品する",new_item_path  %> <!-- new_item_path は /items/newの意味 #http://localhost:3000/rails/info/routes -->
