--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/items/new.html.erb -->
 
-<h1>商品登録フォーム</h1>
+<h1>商品更新フォーム</h1>
 <%= form_with model: @item, local: true do |form| %>
   <p>
     商品名：<br>
@@ -26,5 +26,5 @@
     商品画像ＵＲＬ：<br>
     <%= form.text_area :image_url %>
   </p>
-  <%= form.submit "登録" %>
+  <%= form.submit "更新" %>
 <% end %>
